# app/static/swagger.json
@@ -21,6 +21,18 @@
                         }
                     }
                 },
+                "CubicleUpdate": {
+                    "type": "object",
+                    "properties": {
+                        "id": {
+                        "type": "integer"
+                        },
+                        "enabled": {
+                            "type": "boolean"
+                        }
+                    }
+                
+                },
                 "Payment": {
                     "type": "object",
                     "properties": {
@@ -31,7 +43,7 @@
                             "type": "integer"
                         },
                         "price":{
-                            "type": "float"
+                            "type": "number"
                         },
                         "type_vehicle_id":{
                             "type": "integer"
@@ -87,13 +99,7 @@
                         "schema": {
                         "$ref": "#/components/schemas/Cubicle"
                         }
-                    },
-                    "404": {
-                        "description": "NOT FOUND",
-                        "schema": {
-                        "$ref": "#/components/schemas/Cubicle"
-                        }
-                }
+                    }
                 }
                 },
                 "put" :{
@@ -106,7 +112,7 @@
                         "content": {
                             "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/Cubicle"
+                                "$ref": "#/components/schemas/CubicleUpdate"
                                 }
                             }
                         }
@@ -126,10 +132,57 @@
                 }
                 }
                 }
+            },
+            "/pagos": {
+                "post": {
+                    "tags": [
+                        "Registrar Pago"
+                    ],
+                    "summary": "Registrar un pago",
+                    "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Payment"
+                            }
+                        }
+                    }
+                    },
+                    "responses": {
+                        "200": {
+                            "description": "OK",
+                            "schema": {
+                            "$ref": "#/components/schemas/Payment"
+                            }
+                        },
+                        "404": {
+                            "description": "NOT FOUND",
+                            "schema": {
+                            "$ref": "#/components/schemas/Payment"
+                            }
+                    }
+                    }
+                    },
+                    "get" :{
+                        "tags": [
+                            "Obtener Pagos"
+                        ],
+                        "summary": "Obtener todas las cabinas",
+                       
+                        "responses": {
+                        "200": {
+                            "description": "OK",
+                            "schema": {
+                            "$ref": "#/components/schemas/Payment"
+                            }
+                        }
+                    }
+    
             }
            
     }
     
-
+         }
 
   }
